# athena

./: .gitignore  README.md  __init__.py  lhaw_rlm.py  pyproject.toml
.prime/: .env-metadata.json
advanced_if/: .gitignore  README.md  advanced_if.py  advanced_if_env.py  advanced_if_refine.py  pyproject.toml
advanced_if/configs/: debug.toml  endpoints.toml  eval.toml  eval_one_violation.toml  eval_score_only.toml  refine_one_violation.toml  refine_score_only.toml  test_run.toml
advanced_if/configs/eval/: eval.toml
advanced_if/core/: __init__.py  config.py  dataset.py  evaluation.py  partial_feedback.py  prompts.py  refine_config.py  refine_dataset.py  refine_prompts.py  rubrics.py  trajectory_files.py
autoresearch/: README.md  autoresearch.py  pyproject.toml
configs/: endpoints.toml  eval.toml
configs/eval/: agent_large.toml  agent_medium.toml  agent_small.toml  debug.toml  dim_constraint.toml  dim_context.toml  dim_goal.toml  dim_goal_and_constraint.toml  dim_input.toml  heavy.toml  repl_bash.toml  reward_native.toml  slice_agent_company.toml  slice_benign.toml  slice_divergent.toml  slice_mcp_atlas.toml  slice_outcome_critical.toml  slice_swe_bench.toml  standard.toml  with_env_tips.toml
core/: __init__.py  config.py  constants.py  dataset.py  env.py  judging.py  native_reward.py  transcript.py  types.py
discover_gsm8k/: .gitignore  README.md  discover_gsm8k.py  pyproject.toml
discover_gsm8k/config/: README.md  envs.example.yaml  envs_ifeval.yaml  rl_test_2examples.toml
discover_gsm8k/config/data/: envs_gsm8k.yaml  envs_openmed_pubmedqa.yaml
discover_gsm8k/config/rl/: discover-gsm8k.toml
discover_gsm8k/core/: context_builder.py  types.py
discover_gsm8k/core/rubric_execution/: __init__.py  backends.py  sandbox_client.py  service.py  subprocess_runner.py
discover_gsm8k/data/: data.jsonl  data2.jsonl  data3.jsonl  data_gsm8k.jsonl  data_ifeval.jsonl  data_mixed.jsonl  data_openmed_pubmedqa.jsonl
discover_gsm8k/scripts/: generate_dataset.py  mix_datasets.py
docs/: hf_dataset_schema.md
lhaw/: README.md  lhaw_rlm.py  pyproject.toml
lhaw/.prime/: .env-metadata.json
lhaw/configs/eval/: agent_large.toml  agent_medium.toml  agent_small.toml  debug.toml  dim_constraint.toml  dim_context.toml  dim_goal.toml  dim_goal_and_constraint.toml  dim_input.toml  heavy.toml  repl_bash.toml  reward_native.toml  slice_agent_company.toml  slice_benign.toml  slice_divergent.toml  slice_mcp_atlas.toml  slice_outcome_critical.toml  slice_swe_bench.toml  standard.toml  with_env_tips.toml
lhaw/core/: __init__.py  dataset.py  env.py  judging.py  native_reward.py  state.py
lhaw/docs/: hf_dataset_schema.md
lhaw/scripts/: launch_hosted_evals.sh  run_lhaw_high_signal_hosted.sh
lhaw/tests/: test_reward_modes.py
lhaw_rlm/: __init__.py  lhaw_rlm.py
lhaw_rlm/core/: __init__.py  constants.py  env.py  judging.py
loca_bench_rlm/: .gitignore  README.md  eval.toml  eval_8k.toml  loca_bench_rlm.py  pyproject.toml
loca_bench_rlm/configs/eval/: eval_128k.toml  eval_16k.toml  eval_256k.toml  eval_32k.toml  eval_64k.toml  eval_8k.toml  eval_96k.toml  eval_debug.toml
loca_bench_rlm/configs/rl/: test_run.toml
loca_bench_rlm/core/: __init__.py  config.py  dataset.py  evaluation.py  mcp.py  paths.py  prompting.py
loca_bench_rlm/task-configs/: debug.json
long_context_retrieval/: .gitignore  README.md  eval.toml  long_context_retrieval.py  pyproject.toml
long_context_retrieval/config/eval/: endpoints.toml  eval.toml
long_context_retrieval/config/rl/: long-context-retrieval.toml
long_context_retrieval/configs/eval/: endpoints.toml  eval.toml
long_context_retrieval/configs/rl/: long-context-retrieval.toml
long_context_retrieval/contexts/: dataset.jsonl  manifest.json
long_context_retrieval/contexts/.contexts_cache/workspace/: registry.db  workspace_manifest.json
long_context_retrieval/contexts/dataset_hf/: data-00000-of-00001.arrow  dataset_info.json  state.json
long_context_retrieval/contexts/workspace/: papers.json
long_context_retrieval/core/: __init__.py  adapters.py  config.py  constants.py  context_builder.py  environment.py  rewards.py  settings.py  tools.py  types.py  utils.py  workspace.py
long_context_retrieval/data/: custom_eval.jsonl
long_context_retrieval/scripts/: build_dataset.py
scripts/: run_lhaw_high_signal_hosted.sh
tests/: test_reward_modes.py
