[project]
name = "advanced-if"
version = "0.1.0"
description = "Verifiers-native rubric discovery environment over facebook/AdvancedIF trajectories."
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
    "verifiers>=0.1.11",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "advanced_if.py",
    "core",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
