[project]
name = "advanced-if"
version = "0.1.1"
description = "Verifiers-native rubric discovery environment over facebook/AdvancedIF trajectories."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
tags = [
    "advanced-if",
    "verifiers",
    "datasets",
    "single-turn",
    "rubric",
    "judge",
    "advancedif",
]
dependencies = [
    "verifiers>=0.1.11",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "advanced_if.py",
    "core",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["core", "advanced_if.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
