[project]
name = "advanced-if"
version = "0.1.1"
description = "AdvancedIF rubric induction via verifiers RLMEnv (file-backed trajectories, partial judge tool)."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
tags = [
    "advanced-if",
    "verifiers",
    "datasets",
    "rlm",
    "rubric",
    "judge",
    "partial-feedback",
    "advancedif",
]
dependencies = [
    "verifiers>=0.1.11",
    "datasets",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "advanced_if.py",
    "core",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["core", "advanced_if.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
