[project]
name = "autoresearch"
version = "0.1.0"
description = "Autonomous LLM training research environment for Verifiers and prime-rl"
readme = "README.md"
license = "Apache-2.0"
tags = ["multi-turn", "tool-use", "rlm", "autoresearch", "training"]
requires-python = ">=3.11"
dependencies = [
    "verifiers",
    "datasets"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "autoresearch.py",
    "pyproject.toml",
    "README.md",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]

[tool.verifiers.eval]
num_examples = 3
rollouts_per_example = 1
