[project]
name = "discover-gsm8k"
version = "0.1.3"
description = "GSM8K rubric-discovery environment: learn rubric_fn from (input, response, score) examples"
license = "Apache-2.0"
tags = ["multi-turn", "tool-use", "rlm", "gsm8k", "rubric"]
requires-python = ">=3.11"
dependencies = [
    "verifiers",
    "datasets",
    "typing_extensions",
    "pyyaml",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "discover_gsm8k.py",
    "core",
    "data",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
