[project]
name = "lhaw_rlm"
version = "0.1.1"
description = "LHAW RLM environment: underspecified prompts, simulated user clarification (ask_user), and LLM judge scoring on the ScaleAI/lhaw dataset."
readme = "README.md"
requires-python = ">=3.11"
tags = ["rlm", "lhaw", "multi-turn", "clarification", "verifiers", "datasets"]
dependencies = [
    "datasets>=4.6.1",
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "lhaw_rlm.py",
    "core",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.9.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["core", "tests", "lhaw_rlm.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Prompt-heavy strings exceed a short line width; keep other checks strict.
ignore = ["E501"]
