[project]
name = "loca-bench-rlm"
version = "0.1.0"
description = "Standalone RLM environment for LOCA-bench task configs"
license = "MIT"
tags = ["rlm", "benchmark", "agent", "loca-bench", "tool-use"]
requires-python = ">=3.11"
dependencies = [
    "verifiers",
    "datasets",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
    "pyyaml>=6.0.3",
    "python-docx>=1.2.0",
    "pillow>=12.1.1",
    "reportlab>=4.4.10",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "loca_bench_rlm.py",
    "core",
    "task_configs",
]

[dependency-groups]
dev = [
    "ruff>=0.15.4",
]
