[project]
name = "long-context-retrieval"
version = "0.1.0"
description = "RLM environment package built on the published verifiers package"
tags = ["multi-turn", "tool-use", "rlm", "long-context", "retrieval"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "datasets>=4.0.0",
    "networkx>=3.6.1",
    "pypdf>=6.9.1",
    "pytest>=9.0.2",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "long_context_retrieval.py",
    "core",
]

[tool.verifiers.eval]
num_examples = 1
rollouts_per_example = 1

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
]
