[project]
name = "long-context-retrieval"
version = "0.1.1"
description = "RLM environment package built on the published verifiers package"
tags = ["multi-turn", "tool-use", "rlm", "long-context", "retrieval"]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "datasets>=4.0.0",
    "networkx>=3.6.1",
    "pypdf>=6.9.1",
    "python-dotenv>=1.0.0",
    "requests>=2.32.0",
    "verifiers>=0.1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = [
    "long_context_retrieval.py",
    "core",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.7",
]

[tool.ruff]
target-version = "0.1.1"
line-length = 100
src = ["core", "scripts", "long_context_retrieval.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
# Prompt-heavy strings exceed a short line width; keep other checks strict.
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
# `sys.path` must be set before `core` imports when running `python scripts/build_dataset.py`.
"scripts/build_dataset.py" = ["E402"]
